--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,6 +12,7 @@
             {% if user.is_authenticated %}
             <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
             {% endif %}
+            <a href="products/" class="top-menu"><span class="glyphicon glyphicon-shopping-cart"></span></a>
             <h1><a href="/">Django Blog by Fayaz</a></h1>
         </div>
         <div class="content container">
